# nats_ipc_sdk

./: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  run_perf_test.sh  setup.py
benchmarks/: __init__.py  perf_client.py  perf_server.py
examples/: __init__.py  basic_usage.py
nats_ipc_sdk/: __init__.py  core.py  exceptions.py  utils.py
tests/: __init__.py  test.py
